# tempAlgorithm

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yxf/tempalgorithm/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yxf/tempalgorithm/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/yxf/tempalgorithm/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
tempAlgorithm/: CMakeLists.txt  bintray.gradle  build.gradle  proguard-rules.pro
tempAlgorithm/libs/include/: TempAlg.h
tempAlgorithm/src/main/: AndroidManifest.xml
tempAlgorithm/src/main/cpp/: JniHelper.cpp
tempAlgorithm/src/main/java/com/proton/temp/algorithm/: AlgorithmManager.java
tempAlgorithm/src/main/java/com/proton/temp/algorithm/bean/: AlgorithmData.java  TempImg.java  TempResult.java
tempAlgorithm/src/main/java/com/proton/temp/algorithm/interfaces/: AlgorithmListener.java  IAlgorithm.java
tempAlgorithm/src/main/java/com/proton/temp/algorithm/utils/: AlgorithmHelper.java  ProtonAlgorithm.java
